force-app/main/default/objects/Property__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Baths</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>