force-app/main/default/objects/Property__c/fields/Beds__c.field-meta.xml
<CustomField>
    <fullName>Beds__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Beds</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>