force-app/main/default/objects/Property__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties (Buyer)</relationshipLabel>
    <relationshipName>Properties_Buyer</relationshipName>
    <type>Lookup</type>
</CustomField>