force-app/main/default/objects/Property__c/fields/Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>Lot_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Lot size in acres</description>
    <inlineHelpText>Lot size in acres (e.g. 0.40 or 1.75 acres).</inlineHelpText>
    <label>Lot Size</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>