force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NC</fullName>
                <default>true</default>
                <label>NC</label>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>FL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>