force-app/main/default/objects/Property__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>